# libsnark-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
depends/: CMakeLists.txt
src/: CMakeLists.txt  hash-snark.cpp  hash-snark.h  test-gadget.cpp  test-hash-snark.cpp
